Added kanban board and reneamed dirs

--- a/Atmos-Decomposition/Testing/Sync-Meetings/10-16-23.md
+++ b/Atmos-Decomposition/Testing/Sync-Meetings/10-16-23.md
@@ -3,13 +3,13 @@
 - Possibly use helm-unittest to unit test components
 -  Look into Helm dependency example unit test with Terratest
 - Create a branch in latest decomposition repo to work against
--  Possible use HelmRelease to generate template template and test against this
+- Possible use HelmRelease to generate template template and test against this
 - Focus on Atmos core and helm chart
 - @Me look into contract testing helm charts
-- We'll meet on Thursdays to pair and sync up
+- We'll meet on Mondays to pair and sync up
 
 
-# My Questions
+# Questions
  
  - Should the addons be wrapped in a helm chart? 
 	 - We won't focus on this as a part as of right now. We will only focus on testing the core components.
